--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ function HandleLoginResponse(response)
 {
 	var text = response;
 	//document.getElementById("output").innerHTML = "response: "+text+"<p>";
-	if(text == 1){
+	if(text != 1){
 		window.location="/loginFiles/successPage.html";
 	}
 	else{
